[gd_scene load_steps=15 format=2]

[ext_resource path="res://SCENES/OVERLAYS/Transition_Overlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://SCENES/OVERLAYS/CRT_Overlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://SCENES/SCREENS/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://SCRIPTS/Main.gd" type="Script" id=4]
[ext_resource path="res://ASSETS/SOUND/MUSIC/MENUS.wav" type="AudioStream" id=5]
[ext_resource path="res://SCENES/OVERLAYS/Shutdown_Overlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://ASSETS/SOUND/MUSIC/INGAME.wav" type="AudioStream" id=7]
[ext_resource path="res://ASSETS/SOUND/MUSIC/INTRO_INGAME.wav" type="AudioStream" id=8]
[ext_resource path="res://ASSETS/SOUND/FX/AMBIANCE/Kindergarten.wav" type="AudioStream" id=9]
[ext_resource path="res://SCENES/CHARACTERS/ALIEN_tmp.tscn" type="PackedScene" id=10]
[ext_resource path="res://SCENES/ScoreTracker.tscn" type="PackedScene" id=11]
[ext_resource path="res://SCENES/TALENTS/TECHNIKER.tscn" type="PackedScene" id=12]
[ext_resource path="res://SCENES/TALENTS/EXPLOSION.tscn" type="PackedScene" id=13]
[ext_resource path="res://SCENES/TALENTS/DASH.tscn" type="PackedScene" id=14]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Active_Scene" type="Node2D" parent="."]

[node name="PAPA_Title" parent="Active_Scene" instance=ExtResource( 3 )]

[node name="Talents" type="Node2D" parent="."]

[node name="Dash" parent="Talents" instance=ExtResource( 14 )]

[node name="Characters" type="YSort" parent="."]

[node name="ALIEN" parent="Characters" instance=ExtResource( 10 )]
visible = false

[node name="Enemies" type="YSort" parent="Characters"]

[node name="Explosion" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Techniker" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Shutdown_Overlay" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Transition_Overlay" parent="." instance=ExtResource( 1 )]

[node name="PAPA_Game_Overlay" type="Node2D" parent="."]

[node name="CRT_Overlay" parent="." instance=ExtResource( 2 )]

[node name="Menu_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
autoplay = true
bus = "MUSIC"

[node name="Background_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "AMBIANCE"

[node name="Intro_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0
bus = "MUSIC"

[node name="Game_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "MUSIC"

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 240, 136 )
current = true

[node name="Enemy_Timer" type="Timer" parent="."]
one_shot = true

[node name="Shutdown_Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Cooldown_Timer" type="Timer" parent="."]
one_shot = true

[node name="Talent_Timer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTracker" parent="." instance=ExtResource( 11 )]

[connection signal="teleport" from="Characters/ALIEN" to="." method="teleport"]
[connection signal="transition_finished" from="Transition_Overlay" to="." method="_on_Transition_Overlay_transition_finished"]
[connection signal="finished" from="Intro_Music" to="." method="_on_Intro_Music_finished"]
[connection signal="timeout" from="Enemy_Timer" to="." method="_on_Enemy_Timer_timeout"]
[connection signal="timeout" from="Shutdown_Timer" to="." method="_on_Shutdown_Timer_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="Characters/ALIEN" method="stop_cooldown"]
